# TrainSimulatorAutopilot

./: .coveragerc  .env.example  .eslintrc.json  .gitignore  .luarc.json  .markdownlint.json  .pre-commit-config.yaml  .prettierrc  .test_alerts.json  API_DOCUMENTATION.md  BR143_enginescript.lua  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile.airflow  INCIDENCIA_GETDATA.md  INSTALLATION_GUIDE.md  PROBLEM_DOCUMENTATION.md  README.md  README_DESKTOP.md  RUN_E2E.md  Railworks_GetData_Script.lua  SD40EngineScript.lua  SECURITY_FIXES_SUMMARY.md  SECURITY_REPORT.md  SECURITY_REVIEW_SUMMARY.md  TROUBLESHOOTING.md  airflow_cli_demo.py  alert_system.py  alerts.json  alerts.json.bak.20251214T013635Z  architecture_diagram.py  automated_reports.py  autopilot_system.py  basic_locomotive_control_script_example.lua  bokeh_dashboard.py  commitmsg.txt  complete_autopilot_lua.lua  config.ini.example  configurator.py  (+61 more)
.github/: CODEOWNERS  ISSUE_CI_failure_tsc_integration.md  ISSUE_dashboard_stability.md  ISSUE_electron_finish.md  ISSUE_frontend_metrics.md  ISSUE_health_checks.md  ISSUE_high_frequency_telemetry.md  ISSUE_input_validation.md  ISSUE_native_modules.md  ISSUE_replace_telemetry_placeholders.md  ISSUE_telemetry_template_population.md  ISSUE_websocket_performance.md  PR_COMMENT_run_integration.md  copilot-instructions.md  dependabot.yml  labels.yml
.github/PR_BODIES/: ack-removal.md  remove-ack.md
.github/agents/: deploy-agent.md  docs-agent.md  lint-agent.md  ml-agent.md  security-agent.md  test-agent.md
.github/scripts/: apply_labels_to_existing_issues.py  check_prometheus_targets.py  generate_ci_prometheus.py  simulate_lua.py  wait_for_metrics.py
.github/workflows/: apply-labels-dispatch.yml  auto-label-issues.yml  ci-cd.yml  integration.yml  poc-e2e.yml  windows-ci.yml  windows-run-tests.yml
ai_autopilot/: README.md  requirements-ai.txt
ai_autopilot/docs/: AI_TRAINING.md  AUTOPILOT_SUMMARY.md  INFERENCE.md
ai_autopilot/scripts/: inference_service.py  labeler.py  preprocess.py  record_session.py  train_model.py
ai_autopilot/tests/: test_record_and_label.py
airflow/: DESARROLLO_LOCAL.md  GUIDE_EXTENDER_INTEGRACION.md  README.md  airflow.cfg
airflow/dags/: train_simulator_custom_demo_dag.py  train_simulator_maintenance_dag.py  train_simulator_monitoring_dag.py  train_simulator_reports_dag.py
airflow/plugins/: train_simulator_plugin.py
archivado/: CHANGELOG_2026-01-12.md  CHANGELOG_2026-01-13.md
autopilot/: traction_control.py
dashboard/: README.md  package-lock.json  package.json
dashboard/public/: index.html
dashboard/src/: server.ts
data/: predictive_model.pkl  predictive_model_master_backup.pkl  predictive_model_stash_backup.pkl  telemetry_history.json  telemetry_history_corrupted.json
data/clean/: datos_tren_filtrados.csv
data/raw/: train_data_live.json
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  AUTOPILOT_SENDCOMMAND.md  AUTOPILOT_TRACTION.md  CHANGELOG.md  CHANGELOG_ARCHIVE.md  CHANGE_001_update_copilot_instructions.md  CHECKLIST_RAPIDO_INTEGRACION.md  CONTROLS.md  CORRECCIONES_DASHBOARD.md  DIAGRAMS.md  DOCUMENTATION.md  Data received from Railworks.txt  ESTADO_FINAL_PROYECTO.md  GUIA_DESARROLLADOR.md  GUIA_INSTALACION_INTEGRACION.md  INSTALL_LUA_PLUGIN.md  OPTIMIZACIONES_PERFORMANCE.md  README.md  README_DASHBOARD.md  README_DESKTOP.md  REPORTES_PERFORMANCE.md  RESUMEN_EJECUTIVO.md  REVIEW_SUMMARY.md  ROADMAP_TO_AUTOPILOT.md  TELEMETRY_TEMPLATE_README.md  TrainSimulatorAutopilot.code-workspace  WEB_DASHBOARD_API.md  api-reference.md  data-cleaning.md  data-received-from-railworks.md  flujo-ia-conduccion.md  hoja-trabajo-ia.md  ia-references.md  ia-spec.md  indice-documentacion.md  instrucciones_finales_tsc.md  instrucciones_finales_tsc.py  integration.md  (+11 more)
docs/desarrollo/: logs-tecnicos.md
docs/docs controles/: ack_implementation_steps.md  opcion1_archivo_ack.md  propuestas_de_control.md
docs/ejemplos/: ejemplos-codigo.md
docs/historico/: historial-proyecto.md
docs/procedimientos/: procedimientos-estandar.md
docs/schemas/: telemetry_update.schema.json
docs/troubleshooting/: yaml-ghost-error.md
examples/: send_commands_example.py
prometheus/: README.md  prometheus.yml  rules.yml
reports/: performance_report_20251203_223237.json  performance_report_20251220_143617.json  performance_report_20251220_185624.json  performance_report_20251220_185822.json  performance_report_20251220_190658.json  performance_report_20251220_191017.json  performance_report_20251220_204451.json  performance_report_20251220_204819.json  performance_report_20251220_213456.json
schemas/: control_set_schema.json
scripts/: README.md  analisis_rendimiento.py  backup.py  benchmark_rendimiento.py  check_autopilot_sendcommand.py  check_long_lines.py  check_md_long_lines.py  check_wheelslip_alert.py  check_yaml.py  checklist_seguridad.py  clean_control_chars.py  cleaner.py  cleanup_persisted_fuel.py  debug_bom.py  debug_call_start_autopilot.py  debug_permission_retry.py  debug_rate_limit.py  debug_start_autopilot_repro.py  demo_completa_autopilot.py  demo_senalizacion_europea.py  deploy.bat  deploy.sh  diagnose_autopilot.py  dump_getdata_file.py  extractor.py  ia_logic.py  input_mapper_integration.py  inspect_getdata.py  install_lua_plugin.ps1  monitor_plugin_output.ps1  monitor_slip_example.py  monitoreo_auto_tsc.py  performance_test.py  poll_for_plugin_output.ps1  procedimientos_locomotora.py  reflow_docs.py  reflow_markdown.py  revision_mensual.py  run_check_alerts.py  run_e2e_tests.ps1  (+21 more)
tests/: conftest.py  test_autopilot_signal_reaction.py  test_bom_handling.py  test_signal_mapping.py  test_signal_roja_script.py  test_signals.py  test_tsc_integration.py  tmp_manual_send_test.py
tests/e2e/: test_dashboard_e2e.py  test_e2e_scenarios.py  test_file_ack.py  test_file_ack_duplicate.py  test_file_ack_malformed_and_missing_id.py  (+7 more)
tmp_poc_dir/: ack-8cf27eab-dd77-44e9-a3b7-4314351f5882.json
(+77 files in other folders)
