# pyproject.toml - Configuración centralizada del proyecto
# Train Simulator Autopilot
# Actualizado: 30 de noviembre de 2025

[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "train-simulator-autopilot"
version = "2.0.0"
description = "Sistema de piloto automático inteligente para Train Simulator Classic"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Train Simulator Team", email = "team@trainsimulator.local"},
]
maintainers = [
    {name = "Train Simulator Team", email = "team@trainsimulator.local"},
]
keywords = ["train", "simulator", "autopilot", "ai", "automation", "dashboard"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]

dependencies = [
    # Dependencias principales
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "psutil>=5.9.0",

    # Web framework
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "flask-cors>=4.0.0",

    # WebSockets y comunicación
    "websockets>=12.0",
    "python-socketio>=5.8.0",
    "python-engineio>=4.6.0",

    # MQTT
    "asyncio-mqtt>=0.16.0",
    "paho-mqtt>=2.1.0",

    # Utilidades
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "colorama>=0.4.6",

    # Visualización
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
    "bokeh>=3.3.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-asyncio>=0.21.0",
    "pytest-html>=4.1.0",

    # Code quality
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",

    # Development tools
    "debugpy>=1.8.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",

    # Documentation
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
]

airflow = [
    # Airflow providers
    "apache-airflow>=2.8.0",
    "apache-airflow-providers-postgres>=5.0.0",
    "apache-airflow-providers-http>=4.0.0",
    "apache-airflow-providers-docker>=3.0.0",

    # Database
    "psycopg2-binary>=2.9.0",

    # Message queue
    "redis>=4.5.0",
    "celery>=5.3.0",
]

[project.urls]
Homepage = "https://github.com/tu-usuario/train-simulator-autopilot"
Documentation = "https://train-simulator-autopilot.readthedocs.io/"
Repository = "https://github.com/tu-usuario/train-simulator-autopilot.git"
Issues = "https://github.com/tu-usuario/train-simulator-autopilot/issues"
Changelog = "https://github.com/tu-usuario/train-simulator-autopilot/blob/main/CHANGELOG.md"

[project.scripts]
train-simulator-dashboard = "web_dashboard:main"
train-simulator-autopilot = "autopilot_system:main"

# =============================================================================
# HERRAMIENTAS DE CONFIGURACIÓN
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]  # assert false

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["train_simulator_autopilot"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "websockets.*",
    "asyncio_mqtt.*",
    "paho.mqtt.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--tb=short",
    "--disable-warnings",
    "--cov=train_simulator_autopilot",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "skip_ci: Skip in CI environment",
]

[tool.coverage.run]
source = ["train_simulator_autopilot"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101", "B601"]  # Skip assert checks and shell usage in controlled environments